Fix wrong color for remove icon

--- a/web/css/layout/_minicart.less
+++ b/web/css/layout/_minicart.less
@@ -197,7 +197,12 @@
                 position: absolute;
                 bottom: @1;
                 .right(0);
-                color: var(--gray-300);
+                a {
+                    display: inline-flex;
+                    &::before {
+                        color: var(--gray-300);
+                    }
+                }
             }
             .action.edit,
             .action.delete {
